# tethics

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: test.yml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployUpgradeable.s.sol  RegisterExample.s.sol
contracts/src/: Registry.sol  Shield.sol  ShieldFactory.sol
contracts/test/: Integration.t.sol  Registry.t.sol  Shield.t.sol  ShieldFactory.t.sol
docs/: ARCHITECTURE.md  BAGS-ADAPTER.md  CHARITY-ROUTING.md  DEPLOYMENT-CHECKLIST.md  FRONTEND-DOMAIN-DEPLOYMENT.md  INTEGRATION.md  ONCHAIN-UI-SPEC.md  PRODUCTION-ARCHITECTURE-PLAN.md  PROJECT-PLAN.md  SCHEMA.md  SECURITY-AUDIT.md  SOLANA-MVP.md  THREAT-MODEL.md  UI-PARITY-IMPLEMENTATION.md  UPGRADEABILITY.md  VERIFICATION.md
docs/github-issues/: 01-protocol-governance-architecture.md  02-evm-security-upgradeability-and-charity-governance.md  03-solana-native-parity-and-delegated-governance.md  04-onchain-ui-governance-surface-and-brand-system.md  05-open-source-repo-hygiene-and-release-readiness.md  README.md
frontend/: app.html  index.html
frontend/assets/: README.md  tethics-brand-sheet.html
frontend/css/: style.css
frontend/data/: README.md  projects.json  solana-attestations.json  (+1 more)
scripts/: deploy-frontend-pinata.mjs  serve-frontend.mjs
shared/: package.json  tsconfig.json
solana/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
solana/programs/tethics_registry/: Cargo.toml
solana/programs/tethics_registry/src/: lib.rs
watcher/: .env.example  package-lock.json  package.json
(+55 files in other folders)
